[am] Fix for the scroll jumping bug
Before: https://screencast.googleplex.com/cast/NDkzNTkxMjUwNzA0NzkzNnwxNWZlM2U2Yy1hMg
After: ...

--- a/am/modules/alert-manager-sk/alert-manager-sk.scss
+++ b/am/modules/alert-manager-sk/alert-manager-sk.scss
@@ -177,7 +177,7 @@ alert-manager-sk {
   }
 
   display: grid;
-  height: 100vh;
+  min-height: 100vh;
   grid-template-columns: 24em 1fr;
   grid-template-rows: 36px 1fr 5px;
   grid-template-areas:
